--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #contenedor-de-clases{
     display: grid;
         grid-template-columns: 1fr 1fr ;
-        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-rows:  1fr;
         margin:2%;
         overflow: hidden;
 }
@@ -14,6 +14,10 @@ div img{
     padding: 20px;  
     border: 4px black;
 }
+
+.visible {  
+    display: none;
+ }
 
 body {
     background-image: linear-gradient(to right,rgb(228, 155, 206),  rgb(236, 190, 223) 40%, rgb(241, 233, 187), rgb(245, 166, 205));
